feat: implementa Delete no usecase, testes, repositorio e handler
