# cmd/main.go
@@ -53,6 +53,7 @@ func main() {
 	webServer.AddHandler(http.MethodGet, "/products", webProductHandler.GetProducts)
 	webServer.AddHandler(http.MethodPut, "/products/{id}", webProductHandler.Update)
 	webServer.AddHandler(http.MethodGet, "/products/{id}", webProductHandler.GetProduct)
+	webServer.AddHandler(http.MethodDelete, "/products/{id}", webProductHandler.Delete)
 	webServer.AddHandler(http.MethodGet, "/docs/*", httpSwagger.Handler(
 		httpSwagger.URL("http://localhost:"+config.WebServerPort+"/docs/doc.json"),
 	))
